5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1807_2563.log
== TEST (2019-06-06 16:05:18) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediaf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:48) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:54) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:03) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:14) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:06:19) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- EXECUTION TIME:
1.20174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 14, in <module>
    mediasf = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:52) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento > 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:08:04) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:08:21) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:09:01) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov= aprov + 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:00) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov = aprov + 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:30) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov = aprov + 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:26:56) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov = aprov + 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:27:01) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov = aprov + 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- EXECUTION TIME:
1.27685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 14, in <module>
    mediasf = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:27:38) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:27:58) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:28:43) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:28:49) 
-- CODE:
from numpy import*

mediasf = array(eval(input("Digite as medias: ")))

while (size(mediasf) > 1):
	aprov = 0
	
	for elemento in mediasf:
		if (5 <= elemento < 7):
			aprov += 1
			
		print(aprov)
		
		mediasf = array(eval(input("Digite as proximas medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:29:44) 
-- CODE:
from numpy import*
media_finais = array(eval(input("Digite: "))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: "))

-- ERROR:
File "XXXX", line 4
    while(size(media_finais) > 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:30:59) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: "))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: "))

-- ERROR:
File "XXXX", line 4
    while(size(mf) > 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:31:15) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 18:31:25) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- EXECUTION TIME:
0.938427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 14, in <module>
    media_finais = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:32:05) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:33:07) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 18:33:28) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- EXECUTION TIME:
1.26508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 14, in <module>
    media_finais = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:33:37) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:34:02) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:34:22) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 18:55:24) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	mf = array(eval(input("Digite novamente: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 18:55:32) 
-- CODE:
from numpy import*
mf = array(eval(input("Digite: ")))

while(size(mf) > 1):

	aprovados = 0
	
	for elemento in mf:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	mf = array(eval(input("Digite novamente: ")))

-- EXECUTION TIME:
1.22767
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
